--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -2,6 +2,7 @@
 @import "lib/input.css";
 @import "lib/pagination.css";
 @import "lib/popup.css";
+@import "lib/alert-dialog.css";
 
 .container {
 	flex: 1;
