--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -18,7 +18,7 @@
 	height: 40px;
 	line-height: 40px;
 	padding: 0 10px;
-	margin: 5px 10px 5px 0;
+	margin: 5px 10px;
 	border-radius: 10px;
 	border: 2px solid var(--color-outline);
 	background: var(--color-main);
@@ -49,4 +49,10 @@ input::-webkit-calendar-picker-indicator {
 input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
+}
+
+@media screen and (max-width: 500px)  {
+	.label-title {
+		width: 50%;
+	}
 }
