--- a/public/css/lib/btn.css
+++ b/public/css/lib/btn.css
@@ -62,6 +62,7 @@
 }
 
 .btn-cancel:hover {
+	color: var(--color-main) !important;
 	background: var(--color-font);
 	border-color: var(--color-font);
 }
