--- a/public/css/lib/alert-dialog.css
+++ b/public/css/lib/alert-dialog.css
@@ -7,6 +7,7 @@
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	display: flex;
+	max-width: 300px;
 	flex-direction: column;
 	padding: 20px;
 }
