alert dialog for admin list

--- a/public/css/admin-list.css
+++ b/public/css/admin-list.css
@@ -2,7 +2,7 @@
 @import "lib/card.css";
 @import "lib/input.css";
 @import "lib/popup.css";
-
+@import "lib/alert-dialog.css";
 
 .container {
 	flex: 1;
