--- a/public/css/main.css
+++ b/public/css/main.css
@@ -93,6 +93,11 @@ search
 		font-size: 12px;
 		padding-right: 0;
 		padding-left: 5px;
+	}
+}
+
+@media screen and (max-width: 500px)  {
+	.search-field {
 		max-width: 100px;
 	}
 }
