--- a/public/css/main.css
+++ b/public/css/main.css
@@ -112,7 +112,9 @@ search-icon
 	width: 70px;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
 }
+
 @media screen and (max-width: 1150px)  {
 	.search-icon {
 		height: 35px;
