--- a/public/css/favorites.css
+++ b/public/css/favorites.css
@@ -7,5 +7,11 @@
 }
 
 .container {
-	padding: 30px 15px;
+	padding: 30px 50px;
+}
+
+@media screen and (max-width: 500px) {
+	.container {
+		padding: 30px 15px;
+	}
 }
