--- a/public/css/admin-list.css
+++ b/public/css/admin-list.css
@@ -101,14 +101,11 @@
 }
 
 .delete-section{
+	margin-top: 40px;
 	display: flex;
 	height: 150px;
 	width: 100%;
 	align-content: center;
 	justify-content: center;
 	align-items: center;
-}
-.delete-section-text{
-
-
 }
