--- a/public/css/my-reviews.css
+++ b/public/css/my-reviews.css
@@ -19,8 +19,8 @@
 
 .title-my-reviews {
 	display: flex;
-	font-size: 22px;
+	font-size: 18px;
 	font-weight: bold;
 	justify-content: center;
-	margin: 30px 0 20px;
+	margin: 30px 20px 20px;
 }
