Рефактор запроса фильтров

--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -513,6 +513,10 @@ filter-buttons
 	margin: 0;
 }
 
+.reset-button{
+	margin: 0;
+}
+
 .filter-button-checkbox {
 	display: none;
 	position: absolute;
