--- a/public/css/item.css
+++ b/public/css/item.css
@@ -312,8 +312,8 @@ item-reviews
 
 .rating-title {
 	font-weight: bold;
-	font-size: 16px;
-	margin: 15px 0;
+	font-size: 18px;
+	margin: 10px 0 30px;
 }
 
 @media screen and (max-width: 1150px)  {
