--- a/public/css/more-reviews.css
+++ b/public/css/more-reviews.css
@@ -5,14 +5,13 @@
 
 .review-card {
 	margin: 20px 0 20px 0;
-	padding: 10px;
-	position: relative;
+	padding: 10px 20px;
 }
 
 .more-reviews-title {
-	font-size: 17px;
-	font-weight: 500;
-	margin: 20px 0 20px 0;
+	font-size: 18px;
+	font-weight: 600;
+	margin: 30px 0;
 }
 
 .card.your-review-card {
