--- a/public/css/admin-list.css
+++ b/public/css/admin-list.css
@@ -21,15 +21,31 @@
 	width: 50%;
 }
 
-
 .search {
 	display: flex;
 	height: 40px;
 	line-height: 40px;
 	flex: 1;
 	border-radius: 10px;
-	background: #ffffff;
+	background: var(--color-main);
 	border: 2px solid #D9D9D9;
+}
+
+.search-field::placeholder {
+	color: var(--color-placeholder);
+}
+
+.search-field {
+	margin: 0;
+	flex: 1;
+	padding: 0 15px;
+	border-radius: 10px 0 0 10px;
+	background: transparent;
+	border: none transparent;
+	outline: none;
+	font-size: 15px;
+	font-family: 'Montserrat', sans-serif;
+	color: var(--color-font);
 }
 
 .btn-normal:hover
@@ -47,29 +63,13 @@
 	margin-top: 5px;
 
 }
+
 .trash-icon:hover {
 	fill: red;
 }
 
-.btn-normal{
+.btn-normal {
 	margin: 0;
-}
-
-.search-field::placeholder {
-	color: #BBBBBB;
-}
-
-.search-field {
-	margin: 0;
-	flex: 1;
-	padding: 0 15px;
-	border-radius: 10px 0 0 10px;
-	background: transparent;
-	border: none transparent;
-	outline: none;
-	font-size: 15px;
-	font-family: 'Montserrat', sans-serif;
-	color: #333333;
 }
 
 .admin-list{
