--- a/public/css/users-list.css
+++ b/public/css/users-list.css
@@ -32,17 +32,12 @@
 	line-height: 40px;
 	flex: 1;
 	border-radius: 10px;
-	background: #ffffff;
+	background: var(--color-main);
 	border: 2px solid #D9D9D9;
 }
 
-
-
-
-
-
 .search-field::placeholder {
-	color: #BBBBBB;
+	color: var(--color-placeholder);
 }
 
 .search-field {
@@ -55,7 +50,7 @@
 	outline: none;
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
-	color: #333333;
+	color: var(--color-font);
 }
 
 .user-list{
