--- a/public/css/change-type.css
+++ b/public/css/change-type.css
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	flex-wrap: wrap;
 	width: 100%;
+	padding: 0 50px;
 	max-width: 1300px;
 	min-height: calc(100vh - var(--nav-height));
 }
@@ -13,19 +14,20 @@
 .types-card {
 	display: flex;
 	margin-top: 20px;
-	padding: 5px;
+	padding: 15px;
 }
 
 .types-card img {
 	width: 130px;
 	height: 130px;
 	object-fit: contain;
+	border-radius: 10px;
 }
 
 .type-name {
 	display: flex;
 	align-items: center;
-	margin-left: 10px;
+	margin-left: 20px;
 	font-size: 22px;
 	font-weight: 700;
 }
