--- a/public/css/change-type.css
+++ b/public/css/change-type.css
@@ -13,9 +13,14 @@
 
 .types-card {
 	display: flex;
-	margin-top: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	padding: 15px;
 
+}
+
+.types-card:first-child {
+	margin-top: 20px;
 }
 
 .types-card img {
