--- a/public/css/appearance/dark-theme.css
+++ b/public/css/appearance/dark-theme.css
@@ -18,6 +18,7 @@
 	--color-add: #1882ff;
 	--color-delete: #eb0d13;
 	--color-change: #14abb2;
+	--color-cart-remove: #555555;
 
 	--color-shadow: rgba(0, 0, 0, 0.5);
 }
