--- a/public/css/appearance/light-theme.css
+++ b/public/css/appearance/light-theme.css
@@ -18,6 +18,7 @@
 	--color-add: #009AFF;
 	--color-delete: #DF0310;
 	--color-change: #107F84;
+	--color-cart-remove: #aaaaaa;
 
 	--color-shadow: rgba(0, 0, 0, 0.2);
 }
