--- a/public/css/admin-list.css
+++ b/public/css/admin-list.css
@@ -4,16 +4,6 @@
 @import "lib/popup.css";
 @import "lib/alert-dialog.css";
 
-.container {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	padding: 15px 50px;
-	max-width: 1500px;
-	min-height: calc(100vh - var(--nav-height));
-	align-items: center;
-}
-
 .admin-line {
 	margin: 5px;
 	display: flex;
@@ -21,35 +11,25 @@
 	width: 50%;
 }
 
-.search {
+/*==========================
+search
+==========================*/
+
+.local-search {
 	display: flex;
 	height: 40px;
 	line-height: 40px;
 	flex: 1;
 	border-radius: 10px;
 	background: var(--color-main);
-	border: 2px solid #D9D9D9;
+	border: 2px solid var(--color-outline);
 }
 
 .search-field::placeholder {
 	color: var(--color-placeholder);
 }
 
-.search-field {
-	margin: 0;
-	flex: 1;
-	padding: 0 15px;
-	border-radius: 10px 0 0 10px;
-	background: transparent;
-	border: none transparent;
-	outline: none;
-	font-size: 15px;
-	font-family: 'Montserrat', sans-serif;
-	color: var(--color-font);
-}
-
-.btn-normal:hover
-{
+.btn-normal:hover {
 	background: none;
 }
 
@@ -57,11 +37,9 @@
 	width: 30px;
 	height: 25px;
 	min-width: 30px;
-	fill: black;
-	stroke: #222222;
+	fill: var(--color-font);
 	cursor: pointer;
 	margin-top: 5px;
-
 }
 
 .trash-icon:hover {
@@ -94,7 +72,6 @@
 .admin-info label {
 	font-weight: bold;
 }
-
 
 .delete-section {
 	margin-top: 40px;
