--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -4,17 +4,8 @@
 @import "lib/popup.css";
 @import "lib/add-to-favorites.css";
 
-.container {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	max-width: 1500px;
-	min-height: calc(100vh - var(--nav-height));
-	padding: 0 50px;
-}
-
 .search_result_count {
-	margin: 25px 50px 25px 0;
+	margin-bottom: 25px;
 	font-size: 18px;
 }
 
