--- a/public/css/change-password.css
+++ b/public/css/change-password.css
@@ -2,13 +2,8 @@
 @import "lib/btn.css";
 
 .container {
-	display: flex;
-	align-items: center;
-	min-height: calc(100vh - var(--nav-height));
-	padding: 20px;
-}
-
-.error-list {
+	max-width: 500px;
+	justify-content: center;
 }
 
 .error {
