--- a/public/css/change-type.css
+++ b/public/css/change-type.css
@@ -1,21 +1,12 @@
 @import "lib/pagination.css";
 @import "lib/card.css";
 
-.container {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	width: 100%;
-	padding: 0 50px;
-	max-width: 1300px;
-	min-height: calc(100vh - var(--nav-height));
-}
-
 .types-card {
 	display: flex;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	padding: 15px;
+	cursor: pointer;
 }
 
 .types-card:first-child {
