--- a/public/css/debug.css
+++ b/public/css/debug.css
@@ -1,10 +1,3 @@
-.container {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	padding: 30px 50px;
-	max-width: 1300px;
-}
 
 .traceback-title, .request-title {
 	font-weight: bold;
@@ -15,7 +8,7 @@
 .exception-code-line {
 	margin: 15px 0 15px 30px;
 	padding: 5px;
-	background: #dddddd;
+	background: var(--color-separator);
 }
 
 .method-name {
