--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -69,7 +69,7 @@ main fields and images
 	margin: 5px 10px 5px 0;
 	border-radius: 10px;
 	border: 2px solid var(--color-outline);
-	background-color: var(--color-main);
+	background: var(--color-main);
 }
 
 .input-tag {
