--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,7 +14,7 @@ body {
 	--nav-height: 70px;
 	max-width: 100%;
 	overflow-x: hidden;
-	background-color: var(--color-main);
+	background: var(--color-main);
 }
 
 /*==========================
@@ -28,7 +28,7 @@ nav {
 	height: var(--nav-height);
 	display: flex;
 	align-items: center;
-	background-color: var(--color-main);
+	background: var(--color-main);
 	padding: 0 50px;
 	box-shadow: 0 2px 10px var(--color-shadow);
 }
@@ -199,7 +199,7 @@ nav-bar
 	font-weight: 600;
 	color: #ffffff;
 
-	background-color: var(--color-like);
+	background: var(--color-like);
 	border-radius: 1in;
 }
 
@@ -307,6 +307,16 @@ main {
 .center {
 	display: flex;
 	justify-content: center;
+}
+
+.container {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	padding: 30px 50px;
+	max-width: 1300px;
+	min-height: calc(100vh - var(--nav-height));
+	width: 100%;
 }
 
 /*==========================
