--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -4,33 +4,23 @@
 @import "lib/popup.css";
 @import "lib/alert-dialog.css";
 
-.container {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	padding: 15px 50px;
-	max-width: 1500px;
-	min-height: calc(100vh - var(--nav-height));
-}
-
 /*==========================
 search
 ==========================*/
 
-.search {
+.local-search {
 	display: flex;
 	height: 40px;
 	line-height: 40px;
 	flex: 1;
 	border-radius: 10px;
 	background: var(--color-main);
-	border: 2px solid #D9D9D9;
+	border: 2px solid var(--color-outline);
 }
 
 .search-field::placeholder {
 	color: var(--color-placeholder);
 }
-
 
 /*==========================
 order-list
@@ -56,7 +46,6 @@ order-list
 	font-weight: 600;
 	margin-right: 20px;
 }
-
 
 /*==========================
 order-items
