--- a/public/css/users-list.css
+++ b/public/css/users-list.css
@@ -4,16 +4,6 @@
 @import "lib/popup.css";
 @import "lib/alert-dialog.css";
 
-.container {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	padding: 15px 50px;
-	max-width: 1500px;
-	min-height: calc(100vh - var(--nav-height));
-	align-items: center;
-}
-
 .user-line {
 	margin: 5px;
 	display: flex;
@@ -25,31 +15,23 @@
 	margin-right: 20px;
 }
 
-.search {
+
+/*==========================
+search
+==========================*/
+
+.local-search {
 	display: flex;
 	height: 40px;
 	line-height: 40px;
 	flex: 1;
 	border-radius: 10px;
 	background: var(--color-main);
-	border: 2px solid #D9D9D9;
+	border: 2px solid var(--color-outline);
 }
 
 .search-field::placeholder {
 	color: var(--color-placeholder);
-}
-
-.search-field {
-	margin: 0;
-	flex: 1;
-	padding: 0 15px;
-	border-radius: 10px 0 0 10px;
-	background: transparent;
-	border: none transparent;
-	outline: none;
-	font-size: 15px;
-	font-family: 'Montserrat', sans-serif;
-	color: var(--color-font);
 }
 
 .user-list {
