Igor K.: создан суперкласс исключений с ошибками для вывода пользователям, создан middleware, отлавливающий эти исключения и выводящий их в json, формы регистрации и логина переведены на js, исправлен баг с невозможностью войти в аккаунт после первой проваленной ошибки ввода логина и пароля, новая система ошибок внедрена в: регистрацию, логин, отзывы

--- a/public/css/item.css
+++ b/public/css/item.css
@@ -4,6 +4,7 @@
 @import "lib/add-to-favorites.css";
 @import "lib/alert-dialog.css";
 @import "lib/review-stars.css";
+@import "errors-container.css";
 
 main {
 	background: var(--color-main);
